sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"                                                                                "
"                                                                                "
"› Ask Sofia to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
