sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_completion_timestamps(& (combined))
---
• Waited for background terminal · cargo test -p sofia-core

• Final response.

  done [completion time]
