sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__voice_live_transcript_and_stream.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 34
expression: rendered
---
"                                                            "
"• Agent answer arriving                                     "
"                                                            "
"                                                            "
"› pick a number                                             "
"                                                            "
"                                                            "
"                                                            "
"› Ask Sofia to do anything                                  "
"                                                            "
"   voice ● listening   /voice stop   mic ░░░░░  sofia ░░░░░ "
